...
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- end Strings related to login -->
    <string name="title_activity_map">Map</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="back_to_log_in">Return to Log In Screen</string>
    <string name="register_new_user">Register</string>
    <string name="create_trip">Create Trip</string>
    <string name="places_search_intro_message">Enter Trip Location</string>
    <string name="password_hint">Password-At least 4 characters</string>

...
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_add_attraction"></string>
    <string name="short_30_min_or_less">Short (30 min or less)</string>
    <string name="menu_myTrips">My Trips</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_homepage">Homepage</string>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="next_button">Next</string>
    <string name="trip_name_message">Enter a Trip Name</string>
    <string name="prompt_trip_name">Enter a Trip Name</string>
    <string name="selected_place">Last Selected Place:</string>
...
